# try-rust-diesel

dummy_sql/: Cargo.toml
dummy_sql/src/: main.rs
rust_go/: .env  Cargo.toml  docker-compose.yml
rust_go/migrations/2023-08-01-152336_create_code_name/: up.sql
rust_go/migrations/2023-08-01-152337_create_character/: down.sql  up.sql
rust_go/src/: lib.rs  main.rs  schema.rs
rust_go/src/crud/: mod.rs
rust_go/src/crud/code_name/: create.rs  delete.rs  reads.rs
rust_go/src/models/: character.rs  code_name.rs
rust_go/src/services/: mod.rs
rust_go/src/services/code_name/: create.rs  delete.rs  mod.rs  reads.rs
rust_go/src/utils/: cli.rs  database.rs  mod.rs
rust_ichi/: .env  Cargo.toml  docker-compose.yml  result.txt
rust_ichi/migrations/2023-07-28-180829_create_post/: up.sql
rust_ichi/src/: lib.rs  models.rs  schema.rs
rust_jwt/: Cargo.toml
rust_jwt/src/: main.rs
rust_jwt/src/routes/: token.rs
rust_jwt/src/utils/: auth_token.rs
rust_ni/: .env  Cargo.toml  docker-compose.yml
rust_ni/migrations/2023-07-30-061712_create_user/: down.sql  up.sql
rust_ni/src/: lib.rs  main.rs  schema.rs
rust_ni/src/controllers/: user.rs
rust_roku/: .env  Cargo.toml  docker-compose.yml
rust_roku/migrations/2023-08-02-053555_create_code_names/: down.sql  up.sql
rust_roku/migrations/2023-08-02-053710_create_characters/: down.sql  up.sql
rust_roku/src/: lib.rs  main.rs  schema.rs  server.rs
rust_roku/src/controllers/: code_name_controller.rs  mod.rs
rust_roku/src/models/: code_name_model.rs  mod.rs
rust_roku/src/routes/: code_name_route.rs  mod.rs
rust_roku/src/services/: code_name_service.rs  code_name_service_error.rs  code_name_service_validator.rs  mod.rs
rust_roku/src/utils/: database.rs
rust_san/: .env  Cargo.toml  docker-compose.yml
rust_san/migrations/2023-07-30-114951_create_user/: down.sql  up.sql
rust_san/src/: lib.rs  main.rs  schema.rs
rust_san/src/controllers/: user_controller.rs
rust_san/src/models/: user_model.rs
rust_san/src/routes/: mod.rs  user_router.rs
rust_san/src/services/: mod.rs  user_service.rs  user_service_error.rs  user_validator.rs
rust_san/src/utils/: database.rs
rust_shi/: .env  Cargo.toml  docker-compose.yml
rust_shi/src/: lib.rs  schema.rs
(+17 files in other folders)
