[package]
name = "dummy_sql"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
diesel = { version = "2.1.0", features = ["postgres"] }
dotenv = "0.15.0"
rand = "0.8.5"
tokio = { version = "1.29.1", features = ["full"] }
tokio-postgres = "0.7.8"
