[package]
name = "rust_go"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
color-print = "0.3.4"
diesel = { version = "2.1.0", features = ["postgres", "uuid"] }
diesel-derive-enum = { version = "2.1.0", features = ["postgres"] }
dotenv = "0.15.0"
uuid = { version = "1.4.1", features = ["v4"] }
