[package]
name = "rust_ichi"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
chrono = { version = "0.4.26", features = ["serde"] }
diesel = { version = "2.1.0", features = ["postgres", "uuid", "chrono"] }
dotenv = "0.15.0"
uuid = { version = "1.4.1", features = ["v4"] }
