[package]
name = "rust_san"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
actix-cors = "0.6.4"
actix-web = "4.3.1"
diesel = { version = "2.1.0", features = ["postgres", "r2d2", "uuid"] }
diesel-derive-enum = { version = "2.1.0", features = ["postgres"] }
dotenv = "0.15.0"
env_logger = "0.10.0"
r2d2 = "0.8.10"
serde = { version = "1.0.178", features = ["derive"] }
serde_json = "1.0.104"
uuid = { version = "1.4.1", features = ["v4", "serde"] }
